[doc] Add doc strings to methods (D102, D103)
Change-Id: Idd1db70bd3315edb3bc0105bc175407f8e3393c9

--- a/tox.ini
+++ b/tox.ini
@@ -117,22 +117,20 @@ accept-encodings = utf-8
 require-code = true
 putty-ignore =
     pwb.py,scripts/interwiki.py,scripts/flickrripper.py,pywikibot/site.py, /# noqa: E731/ : +E731
-    generate_family_file.py : +D102,T001
+    generate_family_file.py : +T001
     pwb.py : +T001
-    pywikibot/cosmetic_changes.py : +D102, D103
     pywikibot/date.py,pywikibot/family.py,pywikibot/fixes.py,pywikibot/textlib.py,pywikibot/userinterfaces/terminal_interface_unix.py,pywikibot/userinterfaces/terminal_interface_win32.py,pywikibot/families/wikipedia_family.py : +E241
     tests/page_tests.py : +E241
     scripts/,/pagegenerators.parameterHelp/ : +E241
     scripts/blockreview.py,scripts/imagetransfer.py,scripts/interwiki.py,scripts/maintenance/wikimedia_sites.py : +E241
-    tests/deprecation_tests.py,tests/pagegenerators_tests.py,tests/site_tests.py,tests/textlib_tests.py,tests/wikibase_tests.py : +D102
     tests/ui_tests.py : +D102, D103
     tests/__init__.py,tests/aspects.py,tests/script_tests.py,tests/site_detect_tests.py : +T001
     tests/pwb/ : +T001
     scripts/casechecker.py,scripts/imagetransfer.py : +T001
     scripts/maintenance/make_i18n_dict.py : +T001
-    scripts/archivebot.py,scripts/casechecker.py,scripts/commons_link.py,scripts/cfd.py,scripts/imagecopy.py,scripts/imagecopy_self.py,scripts/interwiki.py,scripts/replicate_wiki.py,scripts/solve_disambiguation.py,scripts/maintenance/compat2core.py,scripts/archive/ : +D102, D103
-    scripts/checkimages.py,scripts/freebasemappingupload.py,scripts/imagetransfer.py,scripts/lonelypages.py,scripts/movepages.py,scripts/nowcommons.py,scripts/redirect.py,scripts/isbn.py,scripts/reflinks.py,scripts/script_wui.py,scripts/revertbot.py,scripts/weblinkchecker.py,scripts/welcome.py : +D102
-    scripts/catall.py,scripts/imageharvest.py,scripts/makecat.py,scripts/maintenance/cache.py,scripts/maintenance/wikimedia_sites.py : +D103
+    scripts/archive/ : +D102, D103
+    scripts/script_wui.py : +D102
+    scripts/makecat.py : +D103
     scripts/interwiki.py,/""/ : +P102
     pywikibot/__init__.py,/link_regex/ : +P103
     tests/textlib_tests.py,/self.assert.*{{/ : +P103
