Ignore print function tests for some scripts
Seems T001 is moved (partially) to T003

Bug: T128437
Change-Id: Ia7c2f8b06153d34ab66e437a1212156b67fcd0ac

--- a/tox.ini
+++ b/tox.ini
@@ -117,17 +117,17 @@ accept-encodings = utf-8
 require-code = true
 putty-ignore =
     pwb.py,scripts/interwiki.py,scripts/flickrripper.py,pywikibot/site.py, /# noqa: E731/ : +E731
-    generate_family_file.py : +T001
-    pwb.py : +T001
+    generate_family_file.py : +T001, T003
+    pwb.py : +T001, T003
     pywikibot/date.py,pywikibot/family.py,pywikibot/fixes.py,pywikibot/textlib.py,pywikibot/userinterfaces/terminal_interface_unix.py,pywikibot/userinterfaces/terminal_interface_win32.py,pywikibot/families/wikipedia_family.py : +E241
     tests/page_tests.py : +E241
     scripts/,/pagegenerators.parameterHelp/ : +E241
     scripts/blockreview.py,scripts/imagetransfer.py,scripts/interwiki.py,scripts/maintenance/wikimedia_sites.py : +E241
     tests/ui_tests.py : +D102, D103
-    tests/__init__.py,tests/aspects.py,tests/script_tests.py,tests/site_detect_tests.py : +T001
-    tests/pwb/ : +T001
-    scripts/casechecker.py,scripts/imagetransfer.py : +T001
-    scripts/maintenance/make_i18n_dict.py : +T001
+    tests/__init__.py,tests/aspects.py,tests/script_tests.py,tests/site_detect_tests.py : +T001, T003
+    tests/pwb/ : +T001, T003
+    scripts/casechecker.py,scripts/imagetransfer.py : +T001, T003
+    scripts/maintenance/make_i18n_dict.py : +T001, T003
     scripts/archive/ : +D102, D103
     scripts/script_wui.py : +D102
     scripts/makecat.py : +D103
