--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ deps = flake8
        flake8-future-import
        flake8-string-format
        flake8-import-order
+       flake8-tuple>=0.2.8
        flake8-print>=2.0.1
 
 [testenv:flake8-py3]
