Re-add featured script to the auto run list
It was removed in 38ac044 when featured was moved into scripts/archive.

Also tidy other parts of that commit, including adding a deprecation
warning to the featured.py script.

Bug: T128955
Change-Id: I1e373b9229b479227e3df30b51cb20915d1f0c47

--- a/tox.ini
+++ b/tox.ini
@@ -128,7 +128,7 @@ putty-ignore =
     tests/pwb/ : +T001, T003
     scripts/casechecker.py,scripts/imagetransfer.py : +T001, T003
     scripts/maintenance/make_i18n_dict.py : +T001, T003
-    scripts/archive/ : +D102, D103
+    scripts/archive/featured.py : +D102, D103
     scripts/script_wui.py : +D102
     scripts/makecat.py : +D103
     scripts/interwiki.py,/""/ : +P102
