Use flake8-putty 0.3.2 auto ignore
Instead of flake8's general # noqa, flake8-putty 0.3.2 allows
individual codes to be disabled with '# flake8: disable=xxx'

The noqa in generate_*.py regarding PYWIKIBOT2_NO_USER_CONFIG
were to prevent E402 (module level import not at top of file)
however this is already unconditionally ignored by flake8 and pep8.

The noqa in editor.py was added in 728524b, when it was an
unused variable.  It is now used, so no error is generated.

Change-Id: I21ee56755311c4c5f9cd427e2ce8aca35568b7f7

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps = flake8
        pyflakes >= 1.1
        hacking
        flake8-docstrings<0.2.2
-       flake8-putty>=0.2.0
+       flake8-putty>=0.3.2
        flake8-coding
        flake8-future-import
        flake8-string-format
@@ -47,7 +47,7 @@ basepython = python3
 deps = flake8
        pyflakes >= 1.1
        flake8-docstrings<0.2.2
-       flake8-putty>=0.2.0
+       flake8-putty>=0.3.2
 
 [testenv:nose]
 commands =
@@ -116,8 +116,8 @@ exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts
 max_line_length = 100
 accept-encodings = utf-8
 require-code = true
+putty-auto-ignore = true
 putty-ignore =
-    pwb.py,scripts/interwiki.py,scripts/flickrripper.py,pywikibot/site.py, /# noqa: E731/ : +E731
     generate_family_file.py : +T001, T003
     pwb.py : +T001, T003
     pywikibot/date.py,pywikibot/family.py,pywikibot/fixes.py,pywikibot/textlib.py,pywikibot/userinterfaces/terminal_interface_unix.py,pywikibot/userinterfaces/terminal_interface_win32.py,pywikibot/families/wikipedia_family.py : +E241
@@ -134,7 +134,14 @@ putty-ignore =
     scripts/makecat.py : +D103
     scripts/interwiki.py,/""/ : +P102
     pywikibot/__init__.py,/link_regex/ : +P103
+    # undefined names on Python 3:
+    pywikibot/page.py , /chr = unichr/ , python_version >= '3' : +F821
+    pywikibot/userinterfaces/terminal_interface_base.py , /raw_input\(\)/ , python_version >= '3' : +F821
+    # invalidly detected as {} format string:
     tests/textlib_tests.py,/self.assert.*{{/ : +P103
+    # __dict__ used in a discouraged manner
+    # regex matches the first physical line of logical line of the error
+    pywikibot/exceptions.py , /PageRelatedError.*__init__/ : +H501
 
 [pep8]
 # see explanations above
