PyFlakes 1.1 has been released
Change-Id: Id161e41c47acf44141817798f4128d6b8ac30934

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands =
     flake8 --doctests {posargs}
 basepython = python2.7
 deps = flake8
-       git+https://github.com/pyflakes/pyflakes.git
+       pyflakes >= 1.1
        hacking
        flake8-docstrings<0.2.2
        flake8-putty>=0.2.0
@@ -45,7 +45,7 @@ commands =
     flake8 --doctests {posargs}
 basepython = python3
 deps = flake8
-       git+https://github.com/pyflakes/pyflakes.git
+       pyflakes >= 1.1
        flake8-docstrings<0.2.2
        flake8-putty>=0.2.0
 
