Use flake8-docstrings>=0.2.6
Bug: T119790
Change-Id: I8d42e5e710f544e365063047e8e17e4d56a8b7a7

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ basepython = python2.7
 deps = flake8
        pyflakes >= 1.1
        hacking
-       flake8-docstrings<0.2.2
+       flake8-docstrings>=0.2.6
        flake8-putty>=0.3.2
        flake8-coding
        flake8-future-import
@@ -46,7 +46,7 @@ commands =
 basepython = python3
 deps = flake8
        pyflakes >= 1.1
-       flake8-docstrings<0.2.2
+       flake8-docstrings>=0.2.6
        flake8-putty>=0.3.2
 
 [testenv:nose]
