[bugfix] re-enable nose34 test
nosetest fails due to parser error:
pip._vendor.packaging.requirements.InvalidRequirement:
Invalid requirement, parse error at "'# Python'"

Removing the comment should solve it

Bug: T135106
Change-Id: I302c11c5716dda7df4c68feaf0623fdfcdbbc51a

--- a/tox.ini
+++ b/tox.ini
@@ -67,7 +67,7 @@ commands =
     nosetests --with-detecthttp -v -a '!net' tests
 deps =
     nose
-    nose-detecthttp>=0.1.3  # Python 3 support added
+    nose-detecthttp>=0.1.3
     six
 
 [testenv:doctest]
