Use py.test for some Travis jobs with 300s timeout
Use pytest-runner to run tests using py.test
and pytest-timeout to kill jobs which take too long.
Use py.text except for SITE_ONLY=1 or PYSETUP_TEST_EXTRAS=1

Bug: T115313
Change-Id: Iae8a77918a3a4ce5a1dba731be6d47716b1c8d02

--- a/tox.ini
+++ b/tox.ini
@@ -152,3 +152,9 @@ max_line_length = 100
 [pep257]
 # see explanations above
 ignore = D105,D211
+
+[pytest]
+python_files=tests/*.py
+# disable recursing into tests/pwb, as that prints the environment,
+# exposing any secure variables in Travis.
+norecursedirs=.git .svn .tox pwb
