--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,14 @@ before_install:
   # Instead install requests in the before_script step below.
   - if [[ "$PYSETUP_TEST_EXTRAS" != '1' ]]; then rm requirements.txt ; fi
 
-  - if [[ "$SITE_ONLY" == '1' ]]; then
-      export USE_NOSE=1 ;
-    elif [[ "$PYSETUP_TEST_EXTRAS" != '1' ]]; then
+  # When the env variable USE_NOSE or USE_PYTEST is set, the appropriate
+  # tool is used, else PYTEST is taken as the default
+  - if [[ "$PYSETUP_TEST_EXTRAS" != '1' && "$USE_NOSE" != '1' && "$USE_PYTEST" != '1' ]]; then
       export USE_PYTEST=1 ;
+    fi
+
+  - if [[ "$SITE_ONLY" == '1' ]]; then
+      echo "Running site tests only code ${LANGUAGE} on family ${FAMILY}" ;
     fi
 
   - export GITHUB_USER=`echo $TRAVIS_REPO_SLUG | cut -d '/' -f 1`
@@ -95,14 +99,16 @@ script:
   - if [[ "$USE_NOSE" == "1" ]]; then
       nosetests --version ;
       if [[ "$SITE_ONLY" == "1" ]]; then
-        echo "Running site tests only code ${LANGUAGE} on family ${FAMILY}" ;
         python setup.py nosetests --tests tests --verbosity=2 -a "family=$FAMILY,code=$LANGUAGE" --with-trim --with-coverage --cover-package=. ;
       else
         python setup.py nosetests --tests tests --verbosity=2 --with-trim --with-coverage --cover-package=. ;
       fi ;
     elif [[ "$USE_PYTEST" == "1" ]]; then
-      pip install --upgrade pytest-runner pytest-cov pytest-timeout "pytest>=2.8.0" ;
-      python setup.py pytest --addopts="-vvv -s --timeout=300 --cov=." ;
+      if [[ "$SITE_ONLY" == "1" ]]; then
+        python setup.py pytest --addopts="-vvv -s --timeout=$TEST_TIMEOUT --cov=. -a \"family=='$FAMILY' and code=='$LANGUAGE'\"" ;
+      else
+        python setup.py pytest --addopts="-vvv -s --timeout=$TEST_TIMEOUT --cov=." ;
+      fi
     else
       coverage run setup.py test ;
     fi
@@ -117,6 +123,7 @@ env:
     # the github repository 'wikimedia/pywikibot-core'.
     # See http://docs.travis-ci.com/user/encryption-keys/ for more information.
     - secure: kofInMlisiTBt9o/Ustc/vySlkKfxGzGCX2LwA1D2waym8sDTS0o5gMJ5LsrT/BUKwZbe1vLozPHqZrrkQvsdTml+DpZuotzdILs0m0f3BUoexEC6OON5IDljuxFyETrD1Ug44ih5Mc4lVFOdTcBzg501ZmswGwQrBvg/OyEFfE=
+    - TEST_TIMEOUT: 300
 
   matrix:
     - LANGUAGE=en FAMILY=wikipedia PYWIKIBOT2_TEST_PROD_ONLY=1
