Run codecov on CI job failure
Bug: T74863
Change-Id: Ic18750859336034c77d5e8757f6bd9cb7b74bd3a

--- a/.travis.yml
+++ b/.travis.yml
@@ -115,6 +115,9 @@ script:
 after_success:
     codecov
 
+after_failure:
+    codecov
+
 env:
   global:
     # This is the encrypted password for Wikimedia SUL user 'Pywikibot-test',
