--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,12 @@ os: linux
 
 addons:
   apt:
+    sources:
+      - debian-sid
     packages:
+      - libssl1.0.0
       - djvulibre-bin
-      - graphviz
       - liblua5.1-0-dev
-      - python-ipaddr
 
 before_install:
   # When PYSETUP_TEST_EXTRAS is not enabled, do not allow the
@@ -134,11 +135,27 @@ env:
 matrix:
   include:
     - python: '2.7_with_system_site_packages'  # equivalent to virtualenv: system_site_packages: true
-      env: LANGUAGE=he FAMILY=wikivoyage SITE_ONLY=1
-    - python: '2.7'
-      env: LANGUAGE=nb FAMILY=wikipedia DIST=trusty
+      env: LANGUAGE=he FAMILY=wikivoyage DIST=precise-sudo PYWIKIBOT2_TEST_NO_RC=1
+      dist: precise
+      sudo: required
+      addons:
+        apt:
+          packages:
+            - djvulibre-bin
+            - graphviz
+            - liblua5.1-0-dev
+            - python-ipaddr
+    - python: '2.7_with_system_site_packages'
+      env: LANGUAGE=nb FAMILY=wikipedia DIST=trusty PYSETUP_TEST_EXTRAS=1
       dist: trusty
       sudo: required
+      addons:
+        apt:
+          packages:
+            - djvulibre-bin
+            - graphviz
+            - liblua5.1-0-dev
+            - python-ipaddr
     - python: '2.7'
       env: LANGUAGE=en FAMILY=wpbeta SITE_ONLY=1 OAUTH_DOMAIN="en.wikipedia.beta.wmflabs.org"
     - python: '3.3'
