--- a/tox.ini
+++ b/tox.ini
@@ -62,7 +62,7 @@ deps = flake8
        flake8-import-order
        flake8-tuple>=0.2.8
        flake8-print>=2.0.1
-       flake8-mock
+       git+https://github.com/jayvdb/flake8-mock@use-ascii-readme
 
 [testenv:nose]
 commands =
