--- a/tox.ini
+++ b/tox.ini
@@ -126,8 +126,9 @@ deps =
 # E402: module level import not at top of file; see T87409
 # H201: Except: format
 # P102,P103: string does contain unindexed parameters; see I36355923
-ignore = E402,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H236,H301,H404,H405,I100,I101
+ignore = E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H201,H236,H301,H404,H405,I100,I101
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
+min-version = 2.6
 max_line_length = 100
 accept-encodings = utf-8
 require-code = true
