--- a/tox.ini
+++ b/tox.ini
@@ -33,18 +33,18 @@ deps =
     ffind>=1.0.2
 
 [testenv:pyflakes-py3]
-commands = ffind --ignore-vcs . '(?<!user-config).py$' --module=pyflakes
+commands = findx . -name '*.py' -a '!' -path '*/.*' -a '!' -name 'user-config.py' : pyflakes
 basepython = python3
 deps =
+    git+https://github.com/jayvdb/findx@exit_code
     pyflakes
-    ffind>=1.0.2
 
 [testenv:pyflakes-pypy]
-commands = ffind --ignore-vcs . '(?<!user-config).py$' --module=pyflakes
+commands = findx . -name '*.py' -a '!' -path '*/.*' -a '!' -name 'user-config.py' : pyflakes
 basepython = pypy
 deps =
+    git+https://github.com/jayvdb/findx@exit_code
     pyflakes
-    ffind>=1.0.2
 
 [testenv:flake8]
 commands =
