Jenkins testing using mwparserfromhell and bs4
Add mwparserfromhell and bs4 to the nose34 rule.

Change-Id: I1d6cabe3f5b58003b3ca922883548742e58d1685

--- a/tox.ini
+++ b/tox.ini
@@ -80,6 +80,8 @@ commands =
     nosetests --version
     nosetests --with-detecthttp -v -a '!net' tests
 deps =
+    mwparserfromhell
+    beautifulsoup4
     nose
     nose-detecthttp>=0.1.3
     six
