Use released findx 0.9.9
Bug: T137628
Change-Id: I40158d4132689eeb909d990a64ff106f40e44810

--- a/tox.ini
+++ b/tox.ini
@@ -25,24 +25,24 @@ commands = python setup.py test
 deps = unittest2
 
 [testenv:pyflakes-py26]
-commands = ffind --ignore-vcs . '(?<!user-config).py$' --module=pyflakes
+commands = findx . -name '*.py' -a '!' -path '*/.*' -a '!' -name 'user-config.py' : pyflakes
 basepython = python2.6
 deps =
     pyflakes
-    ffind>=1.0.2
+    findx >= 0.9.9
 
 [testenv:pyflakes-py3]
 commands = findx . -name '*.py' -a '!' -path '*/.*' -a '!' -name 'user-config.py' : pyflakes
 basepython = python3
 deps =
-    git+https://github.com/jayvdb/findx@exit_code
+    findx >= 0.9.9
     pyflakes
 
 [testenv:pyflakes-pypy]
 commands = findx . -name '*.py' -a '!' -path '*/.*' -a '!' -name 'user-config.py' : pyflakes
 basepython = pypy
 deps =
-    git+https://github.com/jayvdb/findx@exit_code
+    findx >= 0.9.9
     pyflakes
 
 [testenv:flake8]
