--- a/.travis.yml
+++ b/.travis.yml
@@ -121,12 +121,7 @@ after_failure:
 
 env:
   global:
-    # This is the encrypted password for Wikimedia SUL user 'Pywikibot-test',
-    # and is only decrypted by Travis when running builds of code merged into
-    # the github repository 'wikimedia/pywikibot-core'.
-    # See http://docs.travis-ci.com/user/encryption-keys/ for more information.
-    - secure: kofInMlisiTBt9o/Ustc/vySlkKfxGzGCX2LwA1D2waym8sDTS0o5gMJ5LsrT/BUKwZbe1vLozPHqZrrkQvsdTml+DpZuotzdILs0m0f3BUoexEC6OON5IDljuxFyETrD1Ug44ih5Mc4lVFOdTcBzg501ZmswGwQrBvg/OyEFfE=
-    - TEST_TIMEOUT: 300
+    - TEST_TIMEOUT=300
 
   matrix:
     - LANGUAGE=en FAMILY=wikipedia PYWIKIBOT2_TEST_PROD_ONLY=1
