--- a/tox.ini
+++ b/tox.ini
@@ -50,7 +50,7 @@ commands =
     flake8 --version
     flake8 --doctests {posargs}
 basepython = python2.7
-deps = flake8
+deps = flake8<3
        pyflakes >= 1.1
        hacking
        flake8-docstrings>=0.2.6
