[flake8] Use flake8-comprehensions
Change-Id: I77feb4036cb670d19e1bbbd6ea461fa858566901

--- a/tox.ini
+++ b/tox.ini
@@ -56,6 +56,7 @@ deps = flake8<3
        flake8-docstrings>=0.2.6
        flake8-putty>=0.3.2
        flake8-coding
+       flake8-comprehensions
        flake8-future-import
        flake8-string-format
        flake8-import-order
@@ -122,12 +123,13 @@ deps =
 # H301,I100,I101: import order rules; Pywikibot uses rules H306 and I201
 
 # The following are to be fixed
+# C401, C402, C405: does not work with py 2.6
 # D102: Missing docstring in public method
 # D103: Missing docstring in public function
 # E402: module level import not at top of file; see T87409
 # H201: Except: format
 # P102,P103: string does contain unindexed parameters; see I36355923
-ignore = E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H201,H236,H301,H404,H405,I100,I101
+ignore = C401,C402,C405,E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H201,H236,H301,H404,H405,I100,I101
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 min-version = 2.6
 max_line_length = 100
