[flake8] Check PEP-8 naming conventions
- no abbreviation when importing Timestamp or MediaWikiVersion

Change-Id: Id0c12977992e4284a0709454e9060b475c81ffdc

--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,7 @@ deps = flake8<3
        flake8-tuple>=0.2.8
        flake8-print>=2.0.1
        git+https://github.com/jayvdb/flake8-mock@use-ascii-readme
+       pep8-naming
 
 [testenv:nose]
 commands =
@@ -128,8 +129,9 @@ deps =
 # D103: Missing docstring in public function
 # E402: module level import not at top of file; see T87409
 # H201: Except: format
+# N802, N803, N806 : naming convention
 # P102,P103: string does contain unindexed parameters; see I36355923
-ignore = C401,C402,C405,E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H201,H236,H301,H404,H405,I100,I101
+ignore = C401,C402,C405,E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H201,H236,H301,H404,H405,I100,I101,N802,N803,N806
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 min-version = 2.6
 max_line_length = 100
@@ -140,19 +142,26 @@ putty-ignore =
     generate_family_file.py : +T001, T003
     pwb.py : +T001, T003
     pywikibot/date.py,pywikibot/family.py,pywikibot/fixes.py,pywikibot/textlib.py,pywikibot/userinterfaces/terminal_interface_unix.py,pywikibot/userinterfaces/terminal_interface_win32.py,pywikibot/families/wikipedia_family.py : +E241
+    pywikibot/textlib.py : +N801
+    pywikibot/userinterfaces/transliteration.py : +N801
+    pywikibot/userinterfaces/win32_unicode.py : +N801, N812
     tests/page_tests.py : +E241
     scripts/,/pagegenerators.parameterHelp/ : +E241
     scripts/blockreview.py,scripts/imagetransfer.py,scripts/interwiki.py,scripts/maintenance/wikimedia_sites.py : +E241
-    tests/ui_tests.py : +D102, D103
+    tests/ui_tests.py : +D102, D103, N801
     tests/__init__.py,tests/aspects.py,tests/script_tests.py,tests/site_detect_tests.py : +T001, T003
     tests/pwb/ : +T001, T003
+    tests/,/from pywikibot.tools import/ : +N813
     scripts/imagetransfer.py : +T001, T003
+    scripts/checkimages.py,scripts/imagecopy.py,scripts/imagecopy_self.py : +N801
     scripts/maintenance/make_i18n_dict.py : +T001, T003
     scripts/archive/featured.py : +D102, D103
     scripts/script_wui.py : +D102
     scripts/makecat.py : +D103
     scripts/interwiki.py,/""/ : +P102
     pywikibot/__init__.py,/link_regex/ : +P103
+    # valid N805 naming convention exceptions
+    pywikibot/userinterfaces/terminal_interface.py,/from pywikibot.userinterfaces.terminal_interface_.* import .* as UI/ : +N814
     # invalidly detected as {} format string:
     tests/textlib_tests.py,/self.assert.*{{/ : +P103
     # __dict__ used in a discouraged manner
