Remove casechecker.py from ignoring T001/T003 (print function)
casechecker doesn't has print statements anymore after 300c0b6f

Bug: T119904
Change-Id: I1d23ab55e812451f30e9d8f8d67de9bdb4cd52d4

--- a/tox.ini
+++ b/tox.ini
@@ -144,7 +144,7 @@ putty-ignore =
     tests/ui_tests.py : +D102, D103
     tests/__init__.py,tests/aspects.py,tests/script_tests.py,tests/site_detect_tests.py : +T001, T003
     tests/pwb/ : +T001, T003
-    scripts/casechecker.py,scripts/imagetransfer.py : +T001, T003
+    scripts/imagetransfer.py : +T001, T003
     scripts/maintenance/make_i18n_dict.py : +T001, T003
     scripts/archive/featured.py : +D102, D103
     scripts/script_wui.py : +D102
