--- a/tox.ini
+++ b/tox.ini
@@ -74,6 +74,7 @@ deps =
     nose
     nose-detecthttp
     unicodecsv
+    mock
 
 [testenv:nose34]
 basepython = python3
@@ -87,6 +88,7 @@ deps =
     nose
     nose-detecthttp>=0.1.3
     six
+    mock
 
 [testenv:doctest]
 commands =
