[tox] flake8-coding 1.3 does not work with flake8 < 3
- flake8-coding<1.3.0 is required for flake<3
  see: https://integration.wikimedia.org/ci/job/tox/115/console

Bug: T143478
Change-Id: I17df5d6cf7e64c0f2409ef7af1b8e6933a551187

--- a/tox.ini
+++ b/tox.ini
@@ -55,7 +55,7 @@ deps = flake8<3
        hacking
        flake8-docstrings>=0.2.6
        flake8-putty>=0.3.2
-       flake8-coding
+       flake8-coding<1.3.0
        flake8-comprehensions
        flake8-future-import
        flake8-string-format
