--- a/tox.ini
+++ b/tox.ini
@@ -153,7 +153,7 @@ putty-ignore =
     pywikibot/userinterfaces/win32_unicode.py : +N801, N812
     tests/page_tests.py : +E241
     scripts/,/pagegenerators.parameterHelp/ : +E241
-    scripts/blockreview.py,scripts/imagetransfer.py,scripts/interwiki.py,scripts/maintenance/wikimedia_sites.py : +E241
+    scripts/imagetransfer.py,scripts/interwiki.py,scripts/maintenance/wikimedia_sites.py : +E241
     tests/ui_tests.py : +D102, D103, N801
     tests/__init__.py,tests/aspects.py,tests/script_tests.py,tests/site_detect_tests.py : +T001, T003
     tests/pwb/ : +T001, T003
