Use released flake8-mock 0.3
Change-Id: I10d134d8059236ea758065566a64edc390aeaab0

--- a/tox.ini
+++ b/tox.ini
@@ -62,7 +62,7 @@ deps = flake8<3
        flake8-import-order
        flake8-tuple>=0.2.8
        flake8-print>=2.0.1
-       git+https://github.com/jayvdb/flake8-mock@use-ascii-readme
+       flake8-mock>=0.3
        pep8-naming
 
 [testenv:nose]
