Set minimum requirement of websocket-client
setup.py and requirements.txt are updated to set minumum
requirement of websocket-client to 0.33 for socketIO-client
to work.

Bug: T114913
Change-Id: Ifacd0049f2dabe5581ee95937c5a3a3f0d7aaf94

--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,9 @@ Pillow
 google >= 1.7
 socketIO-client<0.6.1
 
+# websocket-client>=0.33 is required by socketIO-client (T114913)
+websocket-client>=0.33
+
 # scripts/script_wui.py:
 crontab
 
