--- a/tox.ini
+++ b/tox.ini
@@ -52,6 +52,7 @@ commands =
 basepython = python2.7
 deps = flake8<3
        pyflakes >= 1.1
+       pydocstyle != 1.1.0
        hacking
        flake8-docstrings>=0.2.6
        flake8-putty>=0.3.2
