Avoid broken pycparser 2.14
Package cryptography depends on cffi which
depends on pycparser.  pycparser 2.14 is broken
and needs to be avoided.

https://github.com/eliben/pycparser/issues/147

Change-Id: Ie95a686dc830d5c70f5dfd8205d579f344e4b193

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ requests>=2.4.1
 pyOpenSSL>=0.13 ; python_full_version < '2.7.9'
 ndg-httpsclient ; python_full_version < '2.7.9'
 pyasn1 ; python_full_version < '2.7.9'
+# https://github.com/eliben/pycparser/issues/147
+pycparser != 2.14
 
 future>=0.15.0 ; python_version < '2.7'
 
