--- a/tox.ini
+++ b/tox.ini
@@ -107,12 +107,15 @@ deps =
 commands = {posargs}
 
 [testenv:doc]
-changedir = docs
-commands = make html
+commands =
+    make html -C ./docs
+    findx -name "*.rst" -x -path ./docs : rstcheck --report severe
 basepython = python3.4
 deps =
     -rrequests-requirements.txt
     -rdocs/requirements-py3.txt
+    findx >= 0.9.9
+    rstcheck
 
 [flake8]
 # The following are intentionally ignored, possibly pending consensus
