Fix generating WMF Labs families
Also creation of family with interwikis on Travis.

Bug: T151372
Change-Id: Iefe1ccee01468586706780796c80e267c1a3b543

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,10 +61,10 @@ script:
 
   - python pwb.py generate_family_file 'https://wiki.musicbrainz.org/' musicbrainz 'n'
   - if [[ $FAMILY == 'wpbeta' ]]; then
-      python -m generate_family_file 'http://'$LANGUAGE'.wikipedia.beta.wmflabs.org/' 'wpbeta' 'n' ;
+      python -m generate_family_file 'http://'$LANGUAGE'.wikipedia.beta.wmflabs.org/' 'wpbeta' 'y' ;
     fi
   - if [[ $FAMILY == 'wsbeta' ]]; then
-      python -m generate_family_file 'http://'$LANGUAGE'.wikisource.beta.wmflabs.org/' 'wsbeta' 'n' ;
+      python -m generate_family_file 'http://'$LANGUAGE'.wikisource.beta.wmflabs.org/' 'wsbeta' 'y' ;
     fi
 
   - python -W error::UserWarning -m generate_user_files -dir:~/.pywikibot/ -family:$FAMILY -lang:$LANGUAGE -v -user:"$PYWIKIBOT2_USERNAME"
