[tox] Remove print_function import for several scripts
- There are few scripts where print_function is imported from __future__
  but print statement/function is not used. The import can be removed.
- print statement/function is prohibit by flake T003, exceptions are
  defined in tox.ini. site_detect_tests.py does not use print function
  anymore and can be removed from this list.
- maintenance/make_i18n_dict.py uses print function but print_function is
  not imported there. The script may fail for older python versions.
  print_funtion is imported now.

Change-Id: I949c4768c8a032785bb7aec2c173c75e53288a75

--- a/tox.ini
+++ b/tox.ini
@@ -155,8 +155,7 @@ putty-ignore =
     scripts/,/pagegenerators.parameterHelp/ : +E241
     scripts/imagetransfer.py,scripts/interwiki.py,scripts/maintenance/wikimedia_sites.py : +E241
     tests/ui_tests.py : +D102, D103, N801
-    tests/__init__.py,tests/aspects.py,tests/script_tests.py,tests/site_detect_tests.py : +T001, T003
-    tests/pwb/ : +T001, T003
+    tests/__init__.py,tests/aspects.py,tests/script_tests.py,tests/pwb/ : +T001, T003
     tests/,/from pywikibot.tools import/ : +N813
     scripts/checkimages.py,scripts/imagecopy.py,scripts/imagecopy_self.py : +N801
     scripts/maintenance/make_i18n_dict.py : +T001, T003
