Allow date-versioned pypi releases from setup.py
This creates releases with versions like 3.0.20170403.

Bug: T152907
Change-Id: Ie2b67b936479cbfc33e64a194e3038f367bc006c

--- a/tox.ini
+++ b/tox.ini
@@ -147,6 +147,7 @@ putty-auto-ignore = true
 putty-ignore =
     generate_family_file.py : +T001, T003
     pwb.py : +T001, T003
+    setup.py : +T003
     pywikibot/date.py,pywikibot/family.py,pywikibot/fixes.py,pywikibot/textlib.py,pywikibot/userinterfaces/terminal_interface_unix.py,pywikibot/userinterfaces/terminal_interface_win32.py,pywikibot/families/wikipedia_family.py : +E241
     pywikibot/textlib.py : +N801
     pywikibot/userinterfaces/transliteration.py : +N801
