--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,6 +26,26 @@ environment:
       PYTHON_VERSION: "2.6.6"
       PYTHON_ARCH: "64"
 
+    - PYTHON: "C:\\Python272"
+      PYTHON_VERSION: "2.7.2"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python330"
+      PYTHON_VERSION: "3.3.0"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python340"
+      PYTHON_VERSION: "3.4.0"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python350"
+      PYTHON_VERSION: "3.5.0"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python360"
+      PYTHON_VERSION: "3.6.0"
+      PYTHON_ARCH: "32"
+
     - PYTHON: "C:\\Python272-x64"
       PYTHON_VERSION: "2.7.2"
       PYTHON_ARCH: "64"
@@ -38,32 +58,55 @@ environment:
       PYTHON_VERSION: "3.4.0"
       PYTHON_ARCH: "64"
 
+    - PYTHON: "C:\\Python350-x64"
+      PYTHON_VERSION: "3.5.0"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Python360-x64"
+      PYTHON_VERSION: "3.6.0"
+      PYTHON_ARCH: "64"
+
     # Appveyor pre-installs these versions onto build machines
 
     - PYTHON: "C:\\Python27"
-      PYTHON_VERSION: "2.7.x" # currently 2.7.9
+      PYTHON_VERSION: "2.7.x"
       PYTHON_ARCH: "32"
 
     - PYTHON: "C:\\Python33"
-      PYTHON_VERSION: "3.3.x" # currently 3.3.5
+      PYTHON_VERSION: "3.3.x"
       PYTHON_ARCH: "32"
 
     - PYTHON: "C:\\Python34"
-      PYTHON_VERSION: "3.4.x" # currently 3.4.3
+      PYTHON_VERSION: "3.4.x"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python35"
+      PYTHON_VERSION: "3.5.x"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python36"
+      PYTHON_VERSION: "3.6.x"
       PYTHON_ARCH: "32"
 
     - PYTHON: "C:\\Python27-x64"
-      PYTHON_VERSION: "2.7.x" # currently 2.7.9
+      PYTHON_VERSION: "2.7.x"
       PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\Python33-x64"
-      PYTHON_VERSION: "3.3.x" # currently 3.3.5
+      PYTHON_VERSION: "3.3.x"
       PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\Python34-x64"
-      PYTHON_VERSION: "3.4.x" # currently 3.4.3
+      PYTHON_VERSION: "3.4.x"
       PYTHON_ARCH: "64"
 
+    - PYTHON: "C:\\Python35-x64"
+      PYTHON_VERSION: "3.5.x"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Python36-x64"
+      PYTHON_VERSION: "3.6.x"
+      PYTHON_ARCH: "64"
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
