--- a/tox.ini
+++ b/tox.ini
@@ -52,9 +52,9 @@ commands =
 basepython = python2.7
 deps = flake8<3
        pyflakes >= 1.1
-       pydocstyle != 2.0.0
+       pydocstyle >= 2.0.0
        hacking
-       flake8-docstrings>=0.2.6
+       flake8-docstrings>=1.1.0
        flake8-putty>=0.3.2
        flake8-coding<1.3.0
        flake8-comprehensions
@@ -137,7 +137,19 @@ deps =
 # H201: Except: format
 # N802, N803, N806 : naming convention
 # P102,P103: string does contain unindexed parameters; see I36355923
-ignore = C401,C402,C405,E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H201,H236,H301,H404,H405,I100,I101,N802,N803,N806
+
+# Errors occured after upgrade to pydocstyle 2.0.0 (T164142)
+# D211: No blank lines allowed before class docstring
+# D102: Missing docstring in public method
+# D401: First line should be in imperative mood; try rephrasing
+# E241: multiple spaces after ':'
+# E305: expected 2 blank lines after class or function definition
+# D413: Missing blank line after last section
+# D300: Use """triple double quotes"""
+# D412: No blank lines allowed between a section header and its content
+# E731: do not assign a lambda expression, use a def
+
+ignore = C401,C402,C405,E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H201,H236,H301,H404,H405,I100,I101,N802,N803,N806,D211,D102,D401,E241,E305,D413,D103,D300,D412,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 min-version = 2.6
 max_line_length = 100
