Fix D300 errors and remove it from flake ignore
Change-Id: I90dfda9d3cec457744c97e42068fded85cad2275

--- a/tox.ini
+++ b/tox.ini
@@ -145,11 +145,10 @@ deps =
 # E241: multiple spaces after ':'
 # E305: expected 2 blank lines after class or function definition
 # D413: Missing blank line after last section
-# D300: Use """triple double quotes"""
 # D412: No blank lines allowed between a section header and its content
 # E731: do not assign a lambda expression, use a def
 
-ignore = C401,C402,C405,E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H201,H236,H301,H404,H405,I100,I101,N802,N803,N806,D211,D102,D401,E241,E305,D413,D103,D300,D412,E731
+ignore = C401,C402,C405,E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H201,H236,H301,H404,H405,I100,I101,N802,N803,N806,D211,D102,D401,E241,E305,D413,D103,D412,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 min-version = 2.6
 max_line_length = 100
