--- a/tox.ini
+++ b/tox.ini
@@ -143,12 +143,11 @@ deps =
 # D102: Missing docstring in public method
 # D401: First line should be in imperative mood; try rephrasing
 # E241: multiple spaces after ':'
-# E305: expected 2 blank lines after class or function definition
 # D413: Missing blank line after last section
 # D412: No blank lines allowed between a section header and its content
 # E731: do not assign a lambda expression, use a def
 
-ignore = C401,C402,C405,E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H201,H236,H301,H404,H405,I100,I101,N802,N803,N806,D211,D102,D401,E241,E305,D413,D103,D412,E731
+ignore = C401,C402,C405,E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H201,H236,H301,H404,H405,I100,I101,N802,N803,N806,D211,D102,D401,E241,D413,D103,D412,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 min-version = 2.6
 max_line_length = 100
