Import unicode_literals in user-fixes.py.sample
This indicates to use py3 compatible unicode literals

Bug:T164253
Change-Id: Iaf4380dec34c77928d30cc9de08aa35b6800b83f

--- a/user-fixes.py.sample
+++ b/user-fixes.py.sample
@@ -3,14 +3,15 @@
 #
 # This is only an example. Don't use it.
 #
+from __future__ import unicode_literals
 
 fixes['example'] = {
     'regex': True,
     'msg': {
-        '_default': u'no summary specified',
+        '_default': 'no summary specified',
     },
     'replacements': [
-        (r'\bword\b', u'two words'),
+        (r'\bword\b', 'two words'),
     ]
 }
 
