--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ unicodedata2>=7.0.0-2 ; python_version < '3'
 # OAuth support
 # mwoauth 0.2.4 is needed because it supports getting identity information
 # about the user
-mwoauth>=0.2.4
+mwoauth>=0.2.4,!=0.3.1
 
 # core interwiki_graph.py:
 git+https://github.com/nlhepler/pydot#egg=pydot-1.0.29
