tox.ini: Check commit message guidelines using commit-message-validator
Bug: T109119
Change-Id: Ifa48bdcd3f89c325271f4e623973f52e991d5c00

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 minversion = 1.7.2
 skipsdist = True
 skip_missing_interpreters = True
-envlist = flake8,pyflakes-{py26,py3,pypy},doctest-{py27,py34},py26,py27,py34
+envlist = commit-message,flake8,pyflakes-{py26,py3,pypy},doctest-{py27,py34},py26,py27,py34
 
 [tox:jenkins]
 # Override default for WM Jenkins
@@ -20,6 +20,10 @@ setenv =
     PYWIKIBOT2_NO_USER_CONFIG=2
 usedevelop = True
 commands = python setup.py test
+
+[testenv:commit-message]
+deps = commit-message-validator
+commands = commit-message-validator
 
 [testenv:py26]
 deps = unittest2
