Avoid memento-client-0.6.0
Bug: T172057
Change-Id: I864c8bdd424569509ebc880669ac3fd743d7e6eb

--- a/requirements.txt
+++ b/requirements.txt
@@ -95,7 +95,7 @@ beautifulsoup4
 pycountry
 
 # scripts/weblinkchecker.py
-memento_client>=0.5.1
+memento_client>=0.5.1,!=0.6.0
 
 # tools/__init__.py
 # pywikibot prefers using the inbuilt bz2 module if python was compiled with
