Fix url for .gitmodules
Bug: T178067
Change-Id: Ic046706c66f5b41b9e31a894c026dcf328ca39dd

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "i18n"]
 	path = scripts/i18n
-	url = https://gerrit.wikimedia.org/r/p/pywikibot/i18n.git
+	url = https://gerrit.wikimedia.org/r/pywikibot/i18n
 	branch = master
 	ignore = all
