[test] Fix print function doc tests
behaviour of flake8-print has been changed since 3.01.
Change the tests exception list then.

Change-Id: Iad9b5790b299dfb17daa8cec0ef11c6c8b1231cb

--- a/tox.ini
+++ b/tox.ini
@@ -168,22 +168,25 @@ accept-encodings = utf-8
 require-code = true
 putty-auto-ignore = true
 putty-ignore =
-    generate_family_file.py : +T001, T003
-    pwb.py : +T001, T003
-    setup.py : +T003
+    generate_family_file.py : +T001
+    pwb.py : +T001
+    setup.py : +T001
+    pywikibot/comms/http.py : +T001
     pywikibot/date.py,pywikibot/family.py,pywikibot/fixes.py,pywikibot/textlib.py,pywikibot/userinterfaces/terminal_interface_unix.py,pywikibot/userinterfaces/terminal_interface_win32.py,pywikibot/families/wikipedia_family.py : +E241
     pywikibot/textlib.py : +N801
     pywikibot/userinterfaces/transliteration.py : +N801
-    pywikibot/userinterfaces/win32_unicode.py : +N801, N812
+    pywikibot/userinterfaces/win32_unicode.py : +N801, N812, T001
     tests/page_tests.py : +E241
     scripts/,/pagegenerators.parameterHelp/ : +E241
     scripts/imagetransfer.py,scripts/maintenance/wikimedia_sites.py : +E241
     tests/ui_tests.py : +D102, D103, N801
-    tests/__init__.py,tests/aspects.py,tests/script_tests.py,tests/pwb/ : +T001, T003
+    tests/__init__.py,tests/aspects.py,tests/script_tests.py,tests/pwb/ : +T001
     tests/,/from pywikibot.tools import/ : +N813
     scripts/checkimages.py,scripts/imagecopy.py,scripts/imagecopy_self.py : +N801
-    scripts/maintenance/make_i18n_dict.py : +T001, T003
+    scripts/maintenance/make_i18n_dict.py : +T001
     scripts/archive/featured.py : +D102, D103
+    scripts/flickrripper.py : +T001
+    scripts/harvest_template.py : +T001
     scripts/script_wui.py : +D102
     scripts/makecat.py : +D103
     scripts/interwiki.py,/""/ : +P102
