[tests] Ignore N812 naming rules for pywikibot/userinterfaces/gui.py
Change-Id: I93f264c632d256faa1b04f47d76a1485a1b6c5b4

--- a/tox.ini
+++ b/tox.ini
@@ -180,6 +180,7 @@ per-file-ignores =
     pywikibot/family.py : E241
     pywikibot/fixes.py : E241
     pywikibot/textlib.py : E241
+    pywikibot/userinterfaces/gui.py : N812
     pywikibot/userinterfaces/terminal_interface_unix.py : E241
     pywikibot/userinterfaces/terminal_interface_win32.py : E241
     pywikibot/textlib.py : N801
