Enable mwparserfromhell for newer versions of python
Bug: T183238
Change-Id: I0cb0ffc4e0e955c3d46f618cc434751d95200b4b

--- a/requirements.txt
+++ b/requirements.txt
@@ -80,7 +80,7 @@ flickrapi ; python_version >= '2.7' and python_version != '3.3'
 irc ; python_version > '2.6'
 
 # textlib.py and patrol.py
-mwparserfromhell>=0.3.3 ; python_version <= '3.4'
+mwparserfromhell>=0.3.3
 
 # The mysql generator in pagegenerators depends on either oursql or MySQLdb
 # pywikibot prefers oursql.  Both are Python 2 only; T89976.
