--- a/requirements.txt
+++ b/requirements.txt
@@ -23,11 +23,10 @@ requests>=2.9,!=2.18.2
 
 # requests security extra
 cryptography>=1.3.4 ; python_version != '2.6' and python_full_version < '2.7.9'
-cryptography>=1.3.4,<2.0 ; python_version == '3.3'
 cryptography>=1.3.4,<=2.0.3 ; python_version == '2.6' and platform_system == 'Windows'
 cryptography>=1.3.4,<2.2 ; python_version == '2.6' and platform_system != 'Windows'
 pyOpenSSL>=0.14,!=17.2.0 ; python_full_version < '2.7.9' and python_version != '2.6'
-PyOpenSSL<17.5.0 ; python_version == '3.3' or python_version == '2.6'
+PyOpenSSL<17.5.0 ; python_version == '2.6'
 idna>=2.0.0 ; python_full_version < '2.7.9'
 # https://github.com/eliben/pycparser/issues/147
 pycparser != 2.14
@@ -55,7 +54,6 @@ python-stdnum
 
 # GUI
 Pillow<4.0.0 ; python_version == '2.6'
-Pillow>=2.0.0,<5.0.0 ; python_version == '3.3'
 Pillow ; python_version == '2.7' or python_version >= '3.4'
 
 # core pagegenerators
@@ -76,8 +74,7 @@ argparse ; python_version < '2.7'
 # If you see that on Python 2, change this to flickrapi==1.4.5
 # On Python 3, force pip to install requests 2.2.1, or remove flickrapi below.
 flickrapi>=1.4.5,<2 ; python_version < '2.7'
-flickrapi<2.3.1 ; python_version == '3.3'
-flickrapi ; python_version >= '2.7' and python_version != '3.3'
+flickrapi ; python_version >= '2.7'
 
 # incomplete core component botirc
 irc ; python_version > '2.6'
