--- a/requirements.txt
+++ b/requirements.txt
@@ -22,10 +22,12 @@
 requests>=2.4.1,!=2.18.2
 
 # requests security extra
-pyOpenSSL>=0.14,!=17.2.0 ; python_full_version < '2.7.9'
-PyOpenSSL<17.5.0 ; python_version == '3.3'
-cryptography>=1.3.4 ; python_full_version < '2.7.9'
+cryptography>=1.3.4 ; python_version != '2.6' and python_full_version < '2.7.9'
 cryptography>=1.3.4,<2.0 ; python_version == '3.3'
+cryptography>=1.3.4,<=2.0.3 ; python_version == '2.6' and platform_system == 'Windows'
+cryptography>=1.3.4,<2.2 ; python_version == '2.6' and platform_system != 'Windows'
+pyOpenSSL>=0.14,!=17.2.0 ; python_full_version < '2.7.9' and python_version != '2.6'
+PyOpenSSL<17.5.0 ; python_version == '3.3' or python_version == '2.6'
 idna>=2.0.0 ; python_full_version < '2.7.9'
 # https://github.com/eliben/pycparser/issues/147
 pycparser != 2.14
@@ -52,8 +54,9 @@ unicodecsv ; python_version < '3' and python_version >= '2.7'
 python-stdnum
 
 # GUI
-Pillow<3.5.0 ; python_version < '2.7'
-Pillow ; python_version >= '2.7'
+Pillow<4.0.0 ; python_version == '2.6'
+Pillow>=2.0.0,<5.0.0 ; python_version == '3.3'
+Pillow ; python_version == '2.7' or python_version >= '3.4'
 
 # core pagegenerators
 google >= 1.7
