--- a/docs/requirements-py3.txt
+++ b/docs/requirements-py3.txt
@@ -1,8 +1,8 @@
 # This is a PIP requirements file for building Sphinx documentation of pywikibot
-# using sphinx-1.3b1 on python3.4, and is used by readthedocs.org.
+# using sphinx on python3.4.
 # requests-requirements.txt is also needed
 
-sphinx==1.3.1
+sphinx
 sphinx-epytext>=0.0.4
 numpydoc
 
