tox.ini: Set rstcheck report level to warning and check all rst files
tox.ini:
    - Add "--ignore-directives automodule,autoclass,autofunction" to
      rstcheck options as they cause warnings.
    - Run the rstcheck on all *.rst files. Previously it used to only look
      under the ./docs directory; therefore other rst files were not checked.
    - Ignore rst files under the ./.tox/* directory because it contains
      installed third-party packages.

tests/README.rst:
    - Fix "Unexpected indentation" error.

docs/library_usage.rst:
    - Fix "Title underline too short" warning.

Change-Id: Ia48661bf8d772a2b9716e4c554b9b4bd3b239373

--- a/tox.ini
+++ b/tox.ini
@@ -133,7 +133,7 @@ commands = {posargs}
 [testenv:doc]
 commands =
     make html -C ./docs
-    findx -name "*.rst" -x -path ./docs : rstcheck --report severe
+    findx -type f -name '*.rst' -not -path './.tox/*' : rstcheck --report warning --ignore-directives automodule,autoclass,autofunction
 basepython = python3.4
 deps =
     -rrequests-requirements.txt
