--- a/tox.ini
+++ b/tox.ini
@@ -168,7 +168,7 @@ deps =
 # D412: No blank lines allowed between a section header and its content
 
 ignore = C401,C402,C405,E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,I100,I101,I202,N802,N803,N806,D401,D413,D103,D412,W503
-exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
+exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*,scripts/userscripts/*
 min-version = 2.6
 max_line_length = 100
 accept-encodings = utf-8
@@ -215,7 +215,7 @@ per-file-ignores =
 [pep8]
 # see explanations above
 ignore = E402
-exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
+exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*,scripts/userscripts/*
 max_line_length = 100
 
 [pep257]
