--- a/tox.ini
+++ b/tox.ini
@@ -200,12 +200,14 @@ per-file-ignores =
     scripts/harvest_template.py : T001
     scripts/script_wui.py : D102
     scripts/makecat.py : D103
+    scripts/maintenance/* : T001
     scripts/interwiki.py : P102
     pywikibot/__init__.py : P103
     # pydocstyle cannot handle multiple __all__ variables
     pywikibot/__init__.py : D999
     # valid N805 naming convention exceptions
     pywikibot/userinterfaces/terminal_interface.py : N814
+    tests/pwb/* : T001
     # invalidly detected as {} format string:
     tests/textlib_tests.py : P103
     # __dict__ used in a discouraged manner
