[IMPR][docs] Fix class and module import errors when building docs
some scripts are failing due to missing dependencies or incorrect
test class name

Bug: T187009
Change-Id: I22afcd69a2d70db32b306cb1c96d6af4eabb0cb8

--- a/docs/requirements-py3.txt
+++ b/docs/requirements-py3.txt
@@ -1,6 +1,6 @@
 # This is a PIP requirements file for building Sphinx documentation of pywikibot
 # using sphinx on python3.4.
-# requests-requirements.txt is also needed
+# requirements.txt and requests-requirements.txt are also needed
 
 sphinx
 sphinx-epytext>=0.0.4
