--- a/tox.ini
+++ b/tox.ini
@@ -136,6 +136,7 @@ commands =
     findx -type f -name '*.rst' -not -path './.tox/*' : rstcheck --report warning --ignore-directives automodule,autoclass,autofunction
 basepython = python3.4
 deps =
+    -rrequirements.txt
     -rrequests-requirements.txt
     -rdocs/requirements-py3.txt
     findx >= 0.9.9
