[test] fix codeclimate pattern
Change-Id: Ic0a637c1a7a7184366632e18bb9c25f9a7f32196

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,10 +7,10 @@ checks:
     enabled: false
 
 exclude_patterns:
-- docs/
-- !docs/conf.py
-- scripts/archive/
-- ez_setup.py
-- *.rst
-- *.txt
+- "docs/"
+- "!docs/conf.py"
+- "scripts/archive/"
+- "ez_setup.py"
+- "*.rst"
+- "*.txt"
 
