mysql.py: add PyMySql as pure-Python MySQL client library
Add PyMySql as pure-Python MySQL client library.
PyMySql will be the preferred library to be imported.
Fallback libraries:
- MySqlDb: as today
- oursql: discontinued

Bug: T142021
Bug: T89976
Change-Id: I28725fbe6ea81900c06ca3ccbf02cdc8704fd66a

--- a/tox.ini
+++ b/tox.ini
@@ -166,6 +166,7 @@ per-file-ignores =
     pywikibot/config2.py : N806
     pywikibot/cosmetic_changes.py : N803, N806
     pywikibot/data/api.py : N803, N806
+    pywikibot/data/mysql.py : N806
     pywikibot/date.py : E241, N803, N806
     pywikibot/diff.py : N806
     pywikibot/editor.py : N803, N806
