--- a/tox.ini
+++ b/tox.ini
@@ -152,7 +152,6 @@ deps =
 # W503: line break before binary operator; against current PEP 8 recommendation
 
 # The following are to be fixed
-# C401, C402, C405: does not work with py 2.6
 # D102: Missing docstring in public method
 # D103: Missing docstring in public function
 # E402: module level import not at top of file; see T87409
@@ -164,7 +163,7 @@ deps =
 # D413: Missing blank line after last section
 # D412: No blank lines allowed between a section header and its content
 
-ignore = C401,C402,C405,E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,I100,I101,I202,N802,N803,N806,D401,D413,D103,D412,W503
+ignore = E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,I100,I101,I202,N802,N803,N806,D401,D413,D103,D412,W503
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*,scripts/userscripts/*
 min-version = 2.7
 max_line_length = 100
