[tox] Disable flake8-string-format rule P101
P101 rule "format string does contain unindexed parameters" was introduced
for python 2.6 compatibility. Since py 2.6 was dropped, the implicit index
arguments of format strings could be enabled which is by the wax closer to
the modulo format string.

Change-Id: I131c760881da3ae6b67b03b6976cc6653b6f7d77

--- a/tox.ini
+++ b/tox.ini
@@ -150,6 +150,7 @@ deps =
 # H405: docstring summary line
 # H301,I100,I101,202: import order rules; Pywikibot uses rules H306 and I201
 # W503: line break before binary operator; against current PEP 8 recommendation
+# P101: format string does contain unindexed parameters
 
 # The following are to be fixed
 # D102: Missing docstring in public method
@@ -163,7 +164,7 @@ deps =
 # D413: Missing blank line after last section
 # D412: No blank lines allowed between a section header and its content
 
-ignore = E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,I100,I101,I202,N802,N803,N806,D401,D413,D103,D412,W503
+ignore = E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,I100,I101,I202,N802,N803,N806,D401,D413,D103,D412,P101,W503
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*,scripts/userscripts/*
 min-version = 2.7
 max_line_length = 100
