[IMPR][doc] Solve various warnings thrown in doctests
- fix epydoc, reST and napoleon formating issues
- merge duplicate apidoc index files for tests
- replace &warning; in cosmetic_changes.py
- escape "*" wildcard in login.py
- exclude &params; description from double-colon fixup
- escape "|" (not reST substitution blocks) - works only sometimes?
- standardize `python ...` examples indentation and remove its fixup
- import two missing modules to make diff_checker.py and mysql.py
  available in docs
- fix and re-enable docs for welcome.py (T192355)

Bug: T187009
Bug: T192355
Change-Id: I75973748aaaf427f58a54f09f6ba762dd5bcfb32

--- a/requirements.txt
+++ b/requirements.txt
@@ -71,6 +71,7 @@ mwparserfromhell>=0.3.3
 # The mysql generator in pagegenerators depends on either oursql or MySQLdb
 # pywikibot prefers oursql.  Both are Python 2 only; T89976.
 oursql ; python_version < '3'
+mysqlclient ; python_version >= '3'
 
 # scripts/script_wui.py depends on Lua, which is not available using pip
 # but can be obtained from: https://github.com/bastibe/lunatic-python
