--- a/tox.ini
+++ b/tox.ini
@@ -54,13 +54,13 @@ commands =
     flake8 --version
     flake8 --doctests {posargs}
 basepython = python2.7
-deps = flake8
+deps = flake8 >= 3.0.2
        pyflakes >= 1.1
        pydocstyle
        hacking
        flake8-docstrings>=1.1.0
        flake8-per-file-ignores
-       flake8-coding<1.3.0
+       flake8-coding
        flake8-comprehensions
        flake8-future-import
        flake8-string-format
