Fix N803 errors within tests/*
Change-Id: I2d5e3892e069e77339c5894a0f168da3b5b99921

--- a/tox.ini
+++ b/tox.ini
@@ -162,7 +162,7 @@ deps =
 # D413: Missing blank line after last section
 # D412: No blank lines allowed between a section header and its content
 
-ignore = D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,N802,N803,N806,D401,D413,D103,D412,P101,W503
+ignore = D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,N802,N806,D401,D413,D103,D412,P101,W503
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*,scripts/userscripts/*
 min-version = 2.7
 max_line_length = 100
@@ -172,6 +172,7 @@ per-file-ignores =
     generate_family_file.py : T001
     pwb.py : T001
     setup.py : T001
+    pywikibot/** : N803
     pywikibot/comms/http.py : T001
     pywikibot/date.py : E241
     pywikibot/family.py : E241
@@ -187,6 +188,7 @@ per-file-ignores =
     scripts/imagetransfer.py : E241
     tests/ui_tests.py : D102, D103, N801
     tests/* : N813
+    scripts/* : N803
     scripts/checkimages.py : N801
     scripts/imagecopy.py : N801
     scripts/imagecopy_self.py : N801
