Revert "[flake8] Ignore pep8-naming N807 in page.py"
This reverts commit d2225c28e8066ddf1d41db9cf0b9c9c30fdc4aee.
The latest version of pep8-naming (0.7) has fixed that bug.
Update pep8-naming requirement.

Bug: T194006
Change-Id: Idb8282d469c5ad9414ca7638906daf40bb4a7bc3

--- a/tox.ini
+++ b/tox.ini
@@ -67,7 +67,7 @@ deps = flake8 >= 3.0.2
        flake8-tuple>=0.2.8
        flake8-print>=2.0.1
        flake8-mock>=0.3
-       pep8-naming!=0.6
+       pep8-naming>=0.7
        flake8-invalid-escape-sequences
 
 # 4a226d07 is https://github.com/erikrose/blessings/pull/104
