Move flake8 dependencies to setup.py
This will provide developers with an easier way of installing flake8
dependencies (`pip install -e .[flake8]`).
I574a92dd7fb can be abandoned if this change-set is accepted.

Bug: T193476
Change-Id: Id023e8711bb7192d13e08aabcdc063359fee5bd9

--- a/tox.ini
+++ b/tox.ini
@@ -51,24 +51,10 @@ deps =
 
 [testenv:flake8]
 commands =
+    pip install -e .[flake8]
     flake8 --version
     flake8 --doctests {posargs}
 basepython = python2.7
-deps = flake8 >= 3.0.2
-       pyflakes >= 1.1
-       pydocstyle
-       hacking
-       flake8-docstrings>=1.1.0
-       flake8-per-file-ignores
-       flake8-coding
-       flake8-comprehensions
-       flake8-future-import
-       flake8-string-format
-       flake8-tuple>=0.2.8
-       flake8-print>=2.0.1
-       flake8-mock>=0.3
-       pep8-naming>=0.7
-       flake8-invalid-escape-sequences
 
 # 4a226d07 is https://github.com/erikrose/blessings/pull/104
 [testenv:flake8-diff]
